--- a/src/main/webapp/app/home/homenew.component.html
+++ b/src/main/webapp/app/home/homenew.component.html
@@ -12,7 +12,7 @@
             text ever since theLorem Ipsum is simply dummy text of the printing
             <head></head>
           </p>
-          <a routerLink="/car">More cars</a>
+          <a routerLink="/all">More cars</a>
         </div>
       </div>
     </div>
